--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.10.1",
     "npm": "^11.1.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "validator": "^13.12.0"
   },
@@ -27,6 +28,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/validator": "^13.12.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
