--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express-session": "^1.18.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
