--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.12.1",
     "next": "15.1.6",
+    "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
